Changes for 1.0.0

 - [NTP-16] removed from events page option hosts all from dropdown, when group is selected (Artem)
 - [NTP-14] removed time limit when "No False For B" is selected (Artem)
 - [NTP-13] fixed link in popup in overview page type data (Artem)
 - [NTP-12] fixed styles in menu for IE6 (Artem)
 - [NTP-11] added sorting by alias in users popup (Artem)
 - [NTD-84] added the enhanced trigger editing (Sasha)
 - [NTD-90] message "Got SIGPIPE ..." won't be displayed with default settings in log file (Sasha)
 - [NTP-10] fixed month representation in seconds in most busy triggers report (Artem)
 - [ZBX-812] fixed Windows agent crash when using incorrect third parameter in proc_info metric (Sasha)
 - [ZBX-809] fixed memory leak while processing proc.num metric under Win2008 (Sasha)
 - [NTD-80] changed the minimal maintenance time from 1 hour to 5 minutes (Sasha)
 - [NTD-77] added availability to add several links between map elements (Artem)
 - [NTD-78] changed the number of problems shown in maps at state "No False For B" (Artem)
 - [ZBX-792] fixed server memory leak in processing remote commands in actions (Dmitry)
 - [NTD-89] increased graphs max skip cell and max skip delay values (Artem)
 - [NTD-87] fixed compilation problems under AIX (Sasha)
 - [NTD-47] added support of system.cpu.intr/switches under FreeBSD (Sasha)
 - [NTP-6] fixed duplicate id's in processing of log and text items (Sasha)
 - [NTD-54] added support of vfs.dev.read/write under FreeBSD (Sasha)
 - [NTD-86] fixed configuration scripts (Sasha)
 - [NTP-6] improved performance of processing of log and text items (Sasha)
 - [NTD-75] added support of <mode> for system.cpu.util under Solaris (Sasha)
 - [NTD-75] fixed processing of system.cpu.util under Solaris (Sasha)
 - [NTP-5] allowed multibyte chars in web scenarios (Artem)
 - [NTD-79] updated list of supported items in item configuration form (Sasha)
 - [NTD-76] fixed incorrect processing of net.tcp.listen (Sasha)